# raytracer

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  camera.c  camera.h  check_timer.c  check_timer.h  cmake_install.cmake  color.h  framebuffer.c  framebuffer.h  input_manager.h  linear_alg.c  linear_alg.h  main.c  mainloop.c  mainloop.h  point_light.h  ray.c  ray.h  raytracer  raytracer.cbp  raytracer.pro  render_mask.c  render_mask.h  scene.c  scene.h  sdl_instance.c  sdl_instance.h  shape.c  shape.h  tools.c
OpenCLPrograms/: draw.cl  helloworld.cl  intersection.cl  main.cl  structs.cl  tools.cl
headers/: camera.h  ray.h  render_mask.h  sdl_instance.h  shape.h  tools.h
scr/: color.c  framebuffer.c  input_manager.c  sdl_instance.c  shape.c
src/: camera.c  check_timer.c  main.c  mainloop.c
src/engine/: framebuffer.c  framebuffer.h  input_manager.c  input_manager.h  mainloop.c  mainloop.h  sdl_instance.c  sdl_instance.h  state.h
src/engine/states/raymarch_state/: camera.h  raytracing_state.c  raytracing_state.h  scene.c
src/ocl_wrapper/: ocl_buffer.c  ocl_create_functions.c  ocl_error_to_string.c  ocl_program.c  ocl_work_functions.c  ocl_wrapper.h  ocl_wrapper_get_device.c  ocl_wrapper_print_info.c
src/states/raymarch_state/: camera.c  camera.h  raytracing_state.c  raytracing_state.h  shape.c  shape.h
src/states/raymarch_state/scene/: cache.c  cache.h  scene.c  scene.h
